<resources>
    <string name="app_name">Weather</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n""
    </string>
    <string name="action_settings">Settings</string>
    <string name="city_name">Location</string>
    <string name="city_time">5:42pm KST</string>
    <string name="weather_condition"> Rainy</string>
    <string name="max_temp">16°</string>
    <string name="min_temp">-7°</string>
    <string name="temparature">14°</string>
    <string name="f1">7pm</string>
    <string name="f1_time">7PM</string>
    <string name="f1_temp">10°</string>
    <string name="f_day1">Saturday</string>
    <string name="textView_f_day1_max">16°</string>
    <string name="textView_f_day1_min">-7°</string>
</resources>