<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#f0f0f0">
        </View>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/textView_f_day"
                android:textColor="@color/white"
                android:text="@string/f_day1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/snow"
                    android:id="@+id/imageView_f_day"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="20%"
                    android:id="@+id/textView_f_day_pop"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/f_day_temp_max"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"
                    android:text="@string/textView_f_day1_max"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/f_day_temp_min"
                    android:textColor="@color/blue"
                    android:layout_marginLeft="5dp"
                    android:text="@string/textView_f_day1_min"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>