<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/main_layout"
    tools:context="com.id20140921.weather.MainActivity"
    android:background="@drawable/back_cloudy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/ll_location">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#212121"
                android:alpha="0.1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_location"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_city_name"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="5dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:text="@string/city_name"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="8sp"
                        android:textColor="@color/grey"
                        android:text="Last Updated:"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="10sp"
                        android:textColor="@color/white"
                        android:id="@+id/textView_time"
                        android:text="@string/city_time"/>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/icon_refresh"
                android:id="@+id/imageView_refresh"
                android:layout_marginLeft="10dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ll_location"
            android:id="@+id/ll_all">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:id="@+id/ll_main">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/ll_weather_condition">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView_condition"
                        android:src="@drawable/cloudy"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:id="@+id/textView_weather_condition"
                        android:text="@string/weather_condition"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:gravity="center" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_max_temp"
                        android:textAlignment="center"
                        android:layout_marginRight="2.5dp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:text="@string/max_temp"
                        android:drawableLeft="@drawable/icon_top"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_min_temp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="2.5dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/min_temp"
                        android:drawableLeft="@drawable/icon_bottom"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_rain_prob"
                        android:text="99%"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_marginLeft="5dp"
                        android:text="Chance of Rain"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temparature"
                        android:textColor="@color/white"
                        android:textSize="100sp"
                        android:id="@+id/textView_temparature" />
                </LinearLayout>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#212121"
                    android:alpha="0.1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:id="@+id/ll_forecast"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:text="Hourly Forcast"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#f1f1f1">
                    </View>
                    <GridView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="5"
                        android:id="@+id/forecase_time">
                    </GridView>
                </LinearLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#212121"
                    android:alpha="0.1"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="Daily Forecast"/>
                    <GridView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:numColumns="1"
                        android:id="@+id/forecase_day">
                    </GridView>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
